<resources>
    <string name="app_name">Navigation Drawer Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Demo APP</string>
    <string name="nav_header_subtitle">shams02@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share_info">Share Info</string>

    <string name="menu_home">Home</string>
    <string name="menu_docs">Personal Docs</string>
    <string name="menu_new">New</string>

    <string name="menu2_trash">Trash</string>
    <string name="menu2_spam">Spam</string>
    <string name="menu2_delete">Delete</string>

    <string name="docs_text">Personal docs here</string>
    <string name="hello">Hello</string>
</resources>