<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_personalDocs"
            android:icon="@drawable/baseline_document_scanner_24"
            android:title="@string/menu_docs" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/baseline_do_not_touch_24"
            android:title="@string/menu_new" />
    </group>

<!--    not coded-->

    <item android:title="@string/menu2_trash">
        <menu>
            <item
                android:id="@+id/nav_spam"
                android:icon="@drawable/baseline_restore_from_trash_24"
                android:title="@string/menu2_spam"/>
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="@string/menu2_delete"/>
        </menu>
    </item>
</menu>