<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationdrawerdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_personalDocs"
        android:name="com.example.navigationdrawerdemo.ui.personalDocs.PersonalDocsFragment"
        android:label="@string/docs_text"
        tools:layout="@layout/fragment_personaldocs" />

    <fragment
        android:id="@+id/nav_new"
        android:name="com.example.navigationdrawerdemo.ui.newP.NewFragment"
        android:label="@string/hello"
        tools:layout="@layout/fragment_new" />
</navigation>